# alsi

./: .travis.yml  LICENSE  README.md  appveyor.yml  changelog.md  requirements.txt  setup.cfg  setup.py  tox.ini
alsi/: __init__.py  _als.cpp  _als.pyx  _nearest_neighbours.cpp  _nearest_neighbours.pyx  als.py  approximate_als.py  bpr.cpp  bpr.h  evaluation.cpp  evaluation.pyx  nearest_neighbours.h  recommender_base.py  utils.py
alsi/cuda/: __init__.py  _cuda.cpp  _cuda.pyx  als.cu  als.h  bpr.cu  bpr.h  matrix.cu  matrix.h  utils.cuh
alsi/datasets/: _download.py  lastfm.py  million_song_dataset.py  movielens.py  reddit.py  sketchfab.py
examples/: lastfm.py
tests/: als_test.py
