[bumpversion]
current_version = 1.0
commit = True
tag = True

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
exclude = build,.eggs,.tox

[isort]
known_first_party = alsi
known_third_party = scipy,annoy,numpy,cython,pandas
line_length = 100
balanced_wrapping = True
indent = '    '
skip = build,.eggs,.tox

[bumpversion:file:alsi/__init__.py]

[bumpversion:file:setup.py]